@@ -1,6 +1,7 @@
 * Wed Mar 28 2018 Nick Miller <nick.miller@onyxpoint.com> - 6.1.1-0
 - sssd::provider::ad::ldap_schema should be a string, not a boolean
 - AD test cleanup
+- Update systemd fixtures and CI assets
 
 * Wed Mar 14 2018 Philippe Muller <philippe.muller@gmail.com> - 6.1.0-0
 - Allow passing ldap_tls_cacert to sssd::provider::ldap
